# swagger_server/models/__init__.py
@@ -4,4 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.grade_record import GradeRecord
+from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.student import Student
