# swagger_server/swagger/swagger.yaml
@@ -33,14 +33,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Student"
+                $ref: '#/components/schemas/Student'
         "400":
           description: Invalid ID
         "404":
           description: Not found
       x-openapi-router-controller: swagger_server.controllers.default_controller
     delete:
-      summary: gets student
+      summary: deletes a student
       description: |
         delete a single student
       operationId: delete_student
@@ -52,19 +52,17 @@ paths:
         style: simple
         explode: false
         schema:
-          type: string
-          format: uuid
+          type: number
+          format: integer
       responses:
         "200":
-          description: Successful operation
+          description: Student deleted successfully
           content:
             application/json:
               schema:
-                type: object
-                format: Student
-                x-content-type: application/json
+                $ref: '#/components/schemas/inline_response_200'
         "400":
-          description: Bad Request
+          description: Invalid student ID
         "404":
           description: Student with specified student_id cannot be found
       x-openapi-router-controller: swagger_server.controllers.default_controller
@@ -78,7 +76,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Student"
+              $ref: '#/components/schemas/Student'
       responses:
         "200":
           description: created
@@ -102,7 +100,8 @@ components:
       type: object
       properties:
         student_id:
-          type: integer
+          type: number
+          format: integer
         first_name:
           type: string
         last_name:
@@ -110,9 +109,9 @@ components:
         grade_records:
           type: array
           items:
-            $ref: "#/components/schemas/GradeRecord"
+            $ref: '#/components/schemas/GradeRecord'
       example:
-        student_id: 0
+        student_id: 0.8008281904610115
         last_name: last_name
         grade_records:
         - grade: 6.0274563
@@ -136,4 +135,12 @@ components:
       example:
         grade: 6.0274563
         subject_name: subject_name
+    inline_response_200:
+      type: object
+      properties:
+        message:
+          type: string
+          example: Student deleted successfully
+      example:
+        message: Student deleted successfully
 
